# gbtarchive_orm

./: LICENSE  manage.py  pyproject.toml  requirements.txt
gbt_archive/: admin.py  apps.py  models.py  utils.py
gbt_archive/migrations/: 0001_initial.py
gbtarchive_orm/: settings.py  urls.py  wsgi.py
metadata/: admin.py  models.py
